<?xml version="1.0" encoding="utf-8"?>

<resources>
	<string name="app_name">Grazer Linuxtage</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_about">About</string>
	<string name="menu_testing">Testing</string>
	<string name="menu_update">Update</string>
	<string name="menu_quit">Quit</string>
	<string name="search_label">Search</string>
	<string name="settings_description">GLT search</string>
	<string name="menu_test_display_event">Display event</string>
	<string name="menu_prefetch_rooms">Prefetch Maps</string>
	<string name="synchronize_button">Synchronize</string>
	<string name="synchronize_title">Synchronize</string>
	<string name="synchronize_description">Synchronizes the schedule with the one from linuxtage.at online.\n\nYou need a connection to the Internet for this to work.</string>
	<string name="db_ver">Database last updated:</string>
	<string name="about_text1">GLT Schedule application</string>
	<string name="about_text2">provided by:\nFlorian \'flowolf\' Klien\n\nExtended by:\nMichael \'mika\' Prokop\nUlrich \'mru\' Dangel\n\nOriginally developed by:\nMichaël Uyttersprot, Pieter Iserbyt and Christophe Vandeplas.</string>
	<string name="about_text3">Source available at http://github.com/flowolf/glt-pentabarf-android\nIcons (CC BY 3.0) from http://linuxtage.at/pressematerial/</string>
	<string name="favorites">Favorites</string>
	<string name="favorites_event_removed">Event removed from favorites</string>
	<string name="favorites_event_added">Event added to favorites</string>
	<string name="share">Share&#8230;</string>
	<string name="updater_title">What do you want to update?</string>
	<string-array name="updater_dialog_choices">
	<item name="updater_dialog_choices_xml">Update schedule contents</item>
	</string-array>
	<string-array name="sort_by_desc"><item>Track</item>
	<item>Room</item>
	</string-array>
	<string name="all_events">All Events</string>
	<string name="current_event">Upcoming events</string>
	<string name="searchprovider">gltsearch</string>
	<string name="search_and_update_hints">To search press the Android <i>Search</i> key.\nMake sure to be up2date using the <i>Update</i> option in the menu.</string>
	<string name="event_specials">Visit linuxtage.at or\nsend feedback to graz14@linuxtage.at</string>
	<string name="fetch_msg1_pt1">Fetched </string>
	<!-- counter -->
	<string name="fetch_msg1_pt2"> events.</string>
	<string name="fetch_downloading">Downloading&#8230;</string>
	<string name="fetch_msg2_pt1">Stored </string>
	<!-- msg.arg1 -->
	<string name="fetch_msg2_pt2"> events.</string>
	<string name="fetch_msg3">Done fetching, loading into DB</string>
	<string name="fetch_msg4">Done loading into DB</string>
	<string name="fetch_msg5">Downloading room images&#8230;</string>
	<string name="fetch_msg6">Room Images downloaded</string>
	<string name="event_descr_no_event_abstr">No abstract available.</string>
	<string name="event_descr_no_event_descr">No lecture description available.</string>
	<string name="share_will_be_attending_pt1">I\'m attending \'</string>
	<!-- Title -->
	<string name="share_will_be_attending_pt2">\' (Day </string>
	<!-- One,Two -->
	<string name="share_will_be_attending_pt3"> at </string>
	<!-- Time -->
	<string name="share_will_be_attending_pt4"> \@ </string>
	<!-- Location -->
	<string name="share_will_be_attending_pt5">) #glt14</string>
	<string name="share_am_attending_pt1">I\'m currently attending \'</string>
	<!-- Title -->
	<string name="share_am_attending_pt2">\' (</string>
	<!-- Location -->
	<string name="share_am_attending_pt3">) #glt14</string>
	<string name="event_no_prev">No more previous events</string>
	<string name="event_no_more">"No more additional events"</string>
	<string name="day">Day</string>
	<string name="room">Room</string>
	<string name="search_for">Search for: </string>
	<string name="events_not_found">Could not find events </string>
	<string name="event_list_track_pt1">Events on Track </string>
	<string name="event_list_track_pt2"> on Day </string>
	<string name="event_list_room_pt1">Events in Room </string>
	<string name="event_list_room_pt2"> on Day </string>
	<string name="list_rooms_day">Rooms for Day </string>
	<string name="list_tracks_day">Tracks for Day </string>
	<string name="sett_notification">Notifications</string>
	<string name="sett_notification_bool">Enable notifications</string>
	<string name="sett_notification_info">If checked, this will notify you of upcoming events you favorited</string>
	<string name="sett_vibrate">Vibrate</string>
	<string name="sett_vibrate_info">Vibrate on notifications</string>
	<string name="sett_led">Flash led</string>
	<string name="sett_led_info">Blink led on notification</string>
	<string name="sett_time">Notification time</string>
	<string name="sett_time_info">Delay before getting notified of an upcoming favorite event</string>
	<string name="sett_fav">Favorites</string>
	<string name="sett_fav_show">Only show upcoming</string>
	<string name="sett_fav_show_info">If checked, this will ony show the upcoming favorites in the list</string>
	<string name="sett_sort">Sorting</string>
	<string name="sett_sort_by">Sort Events by</string>
	<string name="sett_sort_info">Choose the criteria after the events should be aggregated</string>
	
</resources>
