<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<PreferenceCategory android:title="@string/sett_notification">
<CheckBoxPreference
android:title="@string/sett_notification_bool"
android:defaultValue="true"
android:summary="@string/sett_notification_info"
android:key="notifyPref" />
<CheckBoxPreference
android:title="@string/sett_vibrate"
android:defaultValue="true"
android:summary="@string/sett_vibrate_info"
android:key="vibratePref" />
<CheckBoxPreference
android:title="@string/sett_led"
android:defaultValue="true"
android:summary="@string/sett_led_info"
android:key="ledPref" />
<EditTextPreference
android:title="@string/sett_time"
android:defaultValue="10"
android:summary="@string/sett_time_info"
android:key="delayPref"
android:inputType="number"
android:digits="0123456789"
android:maxLength="3"
/>
</PreferenceCategory>
<PreferenceCategory android:title="@string/sett_fav">
<CheckBoxPreference
android:title="@string/sett_fav_show"
android:defaultValue="false"
android:summary="@string/sett_fav_show_info"
android:key="upcomingPref"
 />
</PreferenceCategory>
<PreferenceCategory android:title="@string/sett_sort">
<ListPreference
android:key="sortbyPref"
android:title="@string/sett_sort_by"
android:summary="@string/sett_sort_info"
android:entries="@array/sort_by_desc"
android:entryValues="@array/sort_by_desc" />
</PreferenceCategory>
</PreferenceScreen>